MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Allow_EOI_Any_Status__c.field-meta.xml
<CustomField>
    <fullName>Allow_EOI_Any_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow EOI Any Status</label>
    <type>Checkbox</type>
</CustomField>