MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Ambassador__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ambassador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Ambassador)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>