MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Apartment__c.field-meta.xml
<CustomField>
    <fullName>Apartment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apartment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>