MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/BookingSLA__c.field-meta.xml
<CustomField>
    <fullName>BookingSLA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking SLA</label>
    <type>DateTime</type>
</CustomField>