MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/BookingSLAEnd__c.field-meta.xml
<CustomField>
    <fullName>BookingSLAEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking SLA End</label>
    <type>DateTime</type>
</CustomField>