MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <formula>BrokerAgent__r.Email</formula>
    <label>Broker Email</label>
    <type>Text</type>
</CustomField>