MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/BrokerAgency__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>