MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/BrokerAgent__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>