MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/BrokerAgentName__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgentName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>