MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/BrokerAgentNameArabic__c.field-meta.xml
<CustomField>
    <fullName>BrokerAgentNameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Agent Name Arabic</label>
    <length>150</length>
    <type>Text</type>
</CustomField>