MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Bypass_EOI_Typology_Check__c.field-meta.xml
<CustomField>
    <fullName>Bypass_EOI_Typology_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass EOI Typology Check</label>
    <type>Checkbox</type>
</CustomField>