MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/ComplianceStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplianceStatus__c</fullName>
    <formula>Text(PrimaryContact__r.ComplianceStatus__c)</formula>
    <label>Compliance Status</label>
    <type>Text</type>
</CustomField>