MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Customer_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_City__c</fullName>
    <formula>IF(ISBLANK((Account.PersonContact.MailingCity)),( Account.BillingCity),(Account.PersonContact.MailingCity))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer City</label>
    <type>Text</type>
</CustomField>