MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <formula>IF(ISBLANK((Account.PersonContact.MailingCountry)),( Account.BillingCountry ),(Account.PersonContact.MailingCountry))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Country</label>
    <type>Text</type>
</CustomField>