MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Customer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Postal_Code__c</fullName>
    <formula>IF(ISBLANK((Account.PersonContact.MailingPostalCode)),( Account.BillingPostalCode),(Account.PersonContact.MailingPostalCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Postal Code</label>
    <type>Text</type>
</CustomField>