MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Customer_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Street__c</fullName>
    <formula>IF(ISBLANK((Account.PersonContact.MailingStreet)),( Account.BillingStreet ),(Account.PersonContact.MailingStreet))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Street</label>
    <type>Text</type>
</CustomField>