MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/CustomerBudget__c.field-meta.xml
<CustomField>
    <fullName>CustomerBudget__c</fullName>
    <label>Customer Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED 0 - 5M</fullName>
            </value>
            <value>
                <fullName>AED 5 - 10M</fullName>
            </value>
            <value>
                <fullName>AED 10 - 15M</fullName>
            </value>
            <value>
                <fullName>AED 20M+</fullName>
            </value>
            <value>
                <fullName>AED 15 - 20M</fullName>
            </value>
            <value>
                <fullName>EGP 0 - 5M</fullName>
            </value>
            <value>
                <fullName>EGP 5 - 10M</fullName>
            </value>
            <value>
                <fullName>EGP 10 - 15M</fullName>
            </value>
            <value>
                <fullName>EGP 15 - 20M</fullName>
            </value>
            <value>
                <fullName>EGP 20M+</fullName>
            </value>
            <value>
                <fullName>GBP 1.6 – 2 Million</fullName>
            </value>
            <value>
                <fullName>GBP 2 – 3 Million</fullName>
            </value>
            <value>
                <fullName>GBP 3 – 4 Million</fullName>
            </value>
            <value>
                <fullName>GBP - 4+ Million</fullName>
            </value>
            <value>
                <fullName>Euro 1.8 – 2.3 Million</fullName>
            </value>
            <value>
                <fullName>Euro 2.3 – 3.4 Million</fullName>
            </value>
            <value>
                <fullName>Euro 3.4 – 4.6 Million</fullName>
            </value>
            <value>
                <fullName>Euro 4.6+ Million</fullName>
            </value>
            <value>
                <fullName>AED 1.5 - 2.5M</fullName>
            </value>
            <value>
                <fullName>AED 2.5 - 3.5M</fullName>
            </value>
            <value>
                <fullName>AED 3.5 - 5M</fullName>
            </value>
            <value>
                <fullName>AED 8 - 10M</fullName>
            </value>
            <value>
                <fullName>0K-AED 25K</fullName>
                <isActive>false</isActive>
                <label>0K-AED 25K</label>
            </value>
            <value>
                <fullName>1.5M-3M AED</fullName>
                <isActive>false</isActive>
                <label>1.5M-3M AED</label>
            </value>
            <value>
                <fullName>100K-AED 125K</fullName>
                <isActive>false</isActive>
                <label>100K-AED 125K</label>
            </value>
            <value>
                <fullName>10M-20M AED</fullName>
                <isActive>false</isActive>
                <label>10M-20M AED</label>
            </value>
            <value>
                <fullName>125K-AED 150K</fullName>
                <isActive>false</isActive>
                <label>125K-AED 150K</label>
            </value>
            <value>
                <fullName>150K-AED 175K</fullName>
                <isActive>false</isActive>
                <label>150K-AED 175K</label>
            </value>
            <value>
                <fullName>175K-AED 200K</fullName>
                <isActive>false</isActive>
                <label>175K-AED 200K</label>
            </value>
            <value>
                <fullName>1M-1.5M AED</fullName>
                <isActive>false</isActive>
                <label>1M-1.5M AED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>