MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/CustomerSubType__c.field-meta.xml
<CustomField>
    <fullName>CustomerSubType__c</fullName>
    <label>Customer Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CORPORATE</fullName>
            </value>
            <value>
                <fullName>WEALTH</fullName>
            </value>
            <value>
                <fullName>DOMESTIC</fullName>
            </value>
            <value>
                <fullName>INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>KIOSK</fullName>
            </value>
            <value>
                <fullName>VIP TIER 1</fullName>
            </value>
            <value>
                <fullName>VVIP TIER 2</fullName>
            </value>
            <value>
                <fullName>VVVIP TIER 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>