MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>VIP Client</fullName>
            </value>
            <value>
                <fullName>VVIP Client</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
                <isActive>false</isActive>
                <label>Existing Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>