MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Dateofbirth__c.field-meta.xml
<CustomField>
    <fullName>Dateofbirth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>