MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/EIDNumber__c.field-meta.xml
<CustomField>
    <fullName>EIDNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter the value in the format of 784-xxxx-xxxxxxx-x</inlineHelpText>
    <label>Emirates ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>