MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/EmployeeStatus__c.field-meta.xml
<CustomField>
    <fullName>EmployeeStatus__c</fullName>
    <label>Employee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>