MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/En_EIDNumber__c.field-meta.xml
<CustomField>
    <fullName>En_EIDNumber__c</fullName>
    <label>Emirates ID Number</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>