MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/En_Mobile__c.field-meta.xml
<CustomField>
    <fullName>En_Mobile__c</fullName>
    <label>Mobile (Enc)</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>