MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/EnquiryTrigger__c.field-meta.xml
<CustomField>
    <fullName>EnquiryTrigger__c</fullName>
    <label>Enquiry Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EnquiryCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EnquiryTrigger</valueSetName>
    </valueSet>
</CustomField>