MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/IfUAEEmirates__c.field-meta.xml
<CustomField>
    <fullName>IfUAEEmirates__c</fullName>
    <formula>IF(ISPICKVAL( UAE_Resident_Status__c , &apos;Resident&apos;) , &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>If UAE Emirates?</label>
    <type>Text</type>
</CustomField>