MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/InfluencersName__c.field-meta.xml
<CustomField>
    <fullName>InfluencersName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Influencers Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>