MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Is_there_a_Broker__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Broker__c</fullName>
    <formula>IF(ISBLANK(BrokerAgency__c), &quot;false&quot;, &quot;true&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is there a Broker?</label>
    <type>Text</type>
</CustomField>