MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/IsEOI__c.field-meta.xml
<CustomField>
    <fullName>IsEOI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks Opportunities created via EOI auto-promote pipeline so downstream automation (e.g., OwnerAssigemnt flow) can skip them.</description>
    <label>Is EOI</label>
    <type>Checkbox</type>
</CustomField>