MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/LeadNumber__c.field-meta.xml
<CustomField>
    <fullName>LeadNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>