MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/LeadOriginSource__c.field-meta.xml
<CustomField>
    <fullName>LeadOriginSource__c</fullName>
    <label>Lead Origin Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>