MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost-Market conditions</fullName>
            </value>
            <value>
                <fullName>Lost-Availability</fullName>
            </value>
            <value>
                <fullName>Lost-Dealing with Broker</fullName>
            </value>
            <value>
                <fullName>Lost-Future potential</fullName>
            </value>
            <value>
                <fullName>Lost-Payment Plan</fullName>
            </value>
            <value>
                <fullName>Lost-Price/Budget</fullName>
            </value>
            <value>
                <fullName>Lost-Uncontactable</fullName>
            </value>
            <value>
                <fullName>Lost-Unit layout/size</fullName>
            </value>
            <value>
                <fullName>Lost-Unit view</fullName>
            </value>
            <value>
                <fullName>Lost-Unit Type</fullName>
            </value>
            <value>
                <fullName>Lost-Project Location</fullName>
            </value>
            <value>
                <fullName>Lost-Cross Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>