MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/NameoftheEmployer__c.field-meta.xml
<CustomField>
    <fullName>NameoftheEmployer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of the Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>