MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/NumberOfBedrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBedrooms__c</fullName>
    <label>Number Of Bedrooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1BHK</fullName>
            </value>
            <value>
                <fullName>1BHK + 1</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK + 1</fullName>
            </value>
            <value>
                <fullName>2 BHK + M</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>3BHK + 1</fullName>
            </value>
            <value>
                <fullName>3BHK + 1 + M</fullName>
            </value>
            <value>
                <fullName>3BHK + M</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK + 1</fullName>
            </value>
            <value>
                <fullName>4 BHK + 1 + M</fullName>
            </value>
            <value>
                <fullName>4 BHK + M</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK + 2</fullName>
            </value>
            <value>
                <fullName>5 BHK + M</fullName>
            </value>
            <value>
                <fullName>6 BHK</fullName>
            </value>
            <value>
                <fullName>6 BHK + 1 + M</fullName>
            </value>
            <value>
                <fullName>7 BHK</fullName>
            </value>
            <value>
                <fullName>Beach House</fullName>
            </value>
            <value>
                <fullName>Pent House</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>1 Bedroom</fullName>
            </value>
            <value>
                <fullName>2 Bedroom</fullName>
            </value>
            <value>
                <fullName>3 Bedroom</fullName>
            </value>
            <value>
                <fullName>4 Bedroom</fullName>
            </value>
            <value>
                <fullName>5 Bedroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>