MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/NumberofYearEmployedwithCompany__c.field-meta.xml
<CustomField>
    <fullName>NumberofYearEmployedwithCompany__c</fullName>
    <label>Number of Year Employed with Company</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>