MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/PassportExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PassportExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>