MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code/Zip Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>