MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Preferred_Units__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Units__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Units</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>