MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/ProjectInterest__c.field-meta.xml
<CustomField>
    <fullName>ProjectInterest__c</fullName>
    <label>Project Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectInterest</valueSetName>
    </valueSet>
</CustomField>