MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/PropertyUsage__c.field-meta.xml
<CustomField>
    <fullName>PropertyUsage__c</fullName>
    <label>Property Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Sale</fullName>
            </value>
            <value>
                <fullName>Residential Plot</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Residential Lease</fullName>
            </value>
            <value>
                <fullName>Retail Lease</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <isActive>false</isActive>
                <label>Investor</label>
            </value>
            <value>
                <fullName>Office Lease</fullName>
                <isActive>false</isActive>
                <label>Office Lease</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>