MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Q_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>Q_ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Q ExternalID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>