MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Qassign_Last_Assigned_From_Group__c.field-meta.xml
<CustomField>
    <fullName>Qassign_Last_Assigned_From_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qassign Last Assigned From Group</label>
    <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>