MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Referral_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Referral_Approval_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>