MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Referral_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Referral_Approval_Status__c</fullName>
    <label>Referral Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>