MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/Referral_Unit__c.field-meta.xml
<CustomField>
    <fullName>Referral_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Opportunities (Referral Unit)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>