MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/RegistrationStatus__c.field-meta.xml
<CustomField>
    <fullName>RegistrationStatus__c</fullName>
    <description>This field is used in approval process when opportunity is in registration stage.</description>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>