MODON MRE BPDEV/force-app/main/default/objects/Opportunity/fields/ReOpenOppsforBulk__c.field-meta.xml
<CustomField>
    <fullName>ReOpenOppsforBulk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Open Opps for Bulk</label>
    <type>Checkbox</type>
</CustomField>